# django-templates-variables.py

./: README.md  setup.cfg
