# https://pypi.org/project/setupcfg-generator/
[metadata]
name = django-templates-variables
version = 2019.7.31
url = https://github.com/andrewp-as-is/django-templates-variables.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = django templates variables

[options]
install_requires =
	Django>1.0
	setuptools
packages =
	django_templates_variables
